# sql-models

./: .gitignore  .pre-commit-config.yaml  .sourcery.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yaml
sql_models/date-dimension/: date-dimension.sql  udfs.sql
sql_models/date-dimensions/: main.py
sql_models/date-dimensions/DDL/: DDL.sql  UDFs.sql
sql_models/date-dimensions/utils/: bank_holidays.py  date_dimension.py  daylight_savings.sql
sql_models/football/: README.md  football.sql
sql_models/football/solutions/: 01-beginner.sql  02-intermediate.sql  03-hard.sql
sql_models/human-resources/: human-resources.sql
sql_models/imdb/: analysis.sql  imdb.sql
sql_models/loans/: README.md  loans.sql  questions.md  simple-loan-database.sql
sql_models/loans/solutions/: duckdb.sql  solutions.md
sql_models/school/: school.sql
sql_models/website-backend/: README.md  analytics.sql  website.sql
sql_models/world/: world.sql
src/: main.py
tests/: test__main.py
