[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bills-sql-models"
version = "0.0.5"
description = "Stand-alone SQL models."
authors = [{name = "Bilbottom"}]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
